style/index.css
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;

}

.body{
  font-family: 'Lato', sans-serif; 
  font-size:62.5%;
  color:#D3D3D3 ;
  background: #D3D3D3;
}

h1,h2,h3,h4,h5{
  font-family: 'Poppins', sans-serif;
  font-weight: 700;
}

/*Dark- #272A31
Orange- #EC5242
Grey-   #D3D3D3
 */
 /* COLOR and BACKGROUND */
 .bg-dark{
  background: #272A31;
 }

 .dark{
  color: #272A31;
}

.bg-orange{
  background: #EC5242 ;
 }

 .orange{
  color:  #EC5242;
}

.bg-grey{
  background: #D3D3D3;
 }

 .grey{
  color: #D3D3D3;
}

.shot-it{
  border-radius: 50%;
}

.navigation{
  background: #272A31;
}

.navbar-nav{
  display: flex;
  justify-content: flex-end;
}

 .carousel img{
  height: 80vh;
}

.photographer{
  height:98vh;
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-gap:1rem;
  padding: 1rem;
}
 
.author{
  position: relative; 
  border-radius: 5px;
  background: #fff;
  box-shadow: 5px 10px 22px rgba(3,3,3,0.1);
  cursor: pointer;  
  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
  text-align: center;
  padding: 1rem;
  display:grid;
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr;
  height:80%;
}

.author:after{
  position: absolute;
  top: 0;
  left: 0;
  content: "";
  width: 100%;
  height: 100%;
  z-index: -1;
  box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.3);
  opacity: 0;
  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.author:hover{
  transform: scale(1.1);
}

.author:hover::after{
  opacity: 1;
}

.author-text{
  line-height: 2rem;
}

.author-topic{
  font-weight: 700;
  padding: 0 1rem;
  font-size: 1.5rem;
  width: 100%;
  text-align: center;
}

.name-img{
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 150px; 
  position: absolute;
  bottom: 1rem;
  right: 1em;      
}

.author-name{
  font-weight: 700;
}

.author-img{
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.author-img1{
  background: url("https://cdn.pixabay.com/photo/2018/07/25/08/59/business-3560929__340.jpg")no-repeat;
  background-size: cover;
}
.author-img2{
  background: url("https://cdn.pixabay.com/photo/2015/08/12/00/09/handsome-guy-885388__340.jpg")no-repeat;
  background-size: cover;
  background-position: right;
}
.author-img3{
  background: url("https://cdn.pixabay.com/photo/2017/08/26/11/18/model-2682792__340.jpg")no-repeat;
  background-size: cover;
}
.author-img4{
  background: url("https://cdn.pixabay.com/photo/2015/11/14/04/04/business-1042706__340.jpg")no-repeat;
  background-size: cover;
}

/* Form Style */

.form-container{
  background:#D3D3D3 ;
  height: auto;
}

 .join:hover{
 color: #272A31;
 cursor:pointer;
}

.grid-form{
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  height: auto;
  width: 98%;
  margin: 0 auto;
}

.sign-up{
  padding: 0 1rem;
}

.signup-form{
  width:80%;
  height:70%;
  margin: 0 auto;
  padding : 1rem;
}

.signup-form .input{
  display: block;
  height: 3rem;
}

 .signup-form label{
  text-align: left;
  font-size: 1.2rem;
  width: 100%;
}  

label + label{
  padding-bottom: 0.5rem;
}

input[type=email], input[type=password] {
  background: #f1f1f1;
}

.submit{
  color: white;
  font-size: 1rem;
  width:100%;
  font-weight: 700;
  opacity:1;
}

.submit:hover{
  color: white;
  opacity:0.8;
}

.signincheckbox{
  margin-bottom: 6rem;
}

 /* Footer */

 .footer{
  height:50vh;
  background: #272A31;
  display:grid;
  grid-template-columns:1fr;
  grid-template-rows:1fr 1fr;
  padding:0 7rem;
 }

 .footer-grid{
  display:flex;
  justify-content: space-evenly;
  align-items: center;
  border-bottom: 1px solid #EC5242;
 }

 .footer-navigation .links {
  list-style-type: none;
  padding:0.5em 0;
 }

 .links a {
  text-decoration: none;
  color:white;
  font-weight: 600;
  opacity: 0.5;
}

 .links a:hover {
  text-decoration: underline;
  opacity:1;
  font-weight: 600;
}

 .soc-icon{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
 }

 .soc-icon i{
  padding: 1rem;
  font-size: 2rem;
  color: white;
  opacity:0.5;
 }

 .soc-icon i:hover{
   cursor: pointer;
   opacity:1;
 }

 /* Responsiveness */
 
 @media only screen and (max-width:768px){

  .photographer{
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    margin: 1rem auto;
    background:red;
  }
  .author{
    margin-bottom:0;
    background: aqua;
  }

 }

  
 @media only screen and (max-width:512px){

  .photographer{
    height: auto;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-template-columns:1fr;
    grid-gap: 0rem;
    background:red;
  }

 }

